# DaxBenchmarks

./: ArgumentsParser.cxx  ArgumentsParser.h  CMakeLists.txt  README.md  SharedStatus.cxx  SharedStatus.h  compare.h  compare_mc.h  compare_thresh.h  convert.sh  convertUnstructured.cxx  gen_zcurve_new.cpp  main.cu  mainSerial.cxx  mainTBB.cxx  piston-threshold_geometry.h  pistonImage3d.h  run.sh  vtkDaxPolyDataNormals.cu  vtkDaxPolyDataNormals.cxx  vtkDaxPolyDataNormals.h  vtkDaxPolyDataNormalsImpl.h  zcurve.h
results/cc2.8xlarge/: serial_mc.csv  serial_threshold.csv  tbb_mc.csv  tbb_threshold.csv
results/cg1.4xlarge/: cuda_mc.csv  cuda_threshold.csv  serial_mc.csv  serial_threshold.csv  tbb_mc.csv  tbb_threshold.csv
tlog/: tlog.h  tlogDefs.cpp  tlogDefs.h
